Fixed scrollbar in outer container, added icons to headers, delete all fields.

--- a/src/components/database/database.css
+++ b/src/components/database/database.css
@@ -87,3 +87,7 @@
 .right-border {
   border-right: 1px solid var(--color-boder);
 }
+
+.icon-and-text span {
+  padding-left: 4px;
+}
